numerous alignment fixes to the my-locations control and location switcher

--- a/app/webroot/css/960_16_col.css
+++ b/app/webroot/css/960_16_col.css
@@ -444,3 +444,8 @@ body {
 .container_16 {
   zoom: 1;
 }
+
+/* `alpha and omega classes
+----------------------------------------------------------------------------------------------------*/
+.alpha { margin-left: 0; }
+.omega { margin-right: 0; }
